--- a/TODO
+++ b/TODO
@@ -10,26 +10,35 @@ X 5. "Player 2 submit a word"
 
 X 6. Don't let user end game without playing at least one round
 X 7. Dialog asking if the player is sure to exit the page ~ 1 hours -- 0.5 days
-8. layout/grid 
-      - create grid
-      - organize elements in the grid
-      - make sure page is looking nice when resizing 
+X 8. layout/grid 
+      X - create grid
+      X - organize elements in the grid
+      X - make sure page is looking nice when resizing 
 9. create logo ~ 4 hours -- 1 day 
-10. font/sizing choose font for every element, and size of the font for every element,  ~ 5 hours -- 1 day
-    - text
-    - buttons
+X 10. font/sizing choose font for every element, and size of the font for every element,  ~ 5 hours -- 1 day
+    X - text
+    X - buttons
     X - bingo switch
-    - score table
+    X - score table
+    - specify button width in %percents
 11. color/ and shape ~ 10 hours -- 2 days
     - background
     - nav bar/ footer
     - buttons
     - table
-12. all above is working for both desktop and mobile ~ 3 hours -- 1 day
-13. analytics
-14. Something to detect crashes. When someone crashes the app receive an email or simillar.
-15. i18n (internationalization - make website change languages) ~ 5 hours -- 3 day
-16. make input correctly move coursor when clicking on arrows
-17. callPlayerToAction can be simplified
+    - rename start button
+12. Create PLAYER WON
+13. all above is working for both desktop and mobile ~ 3 hours -- 1 day
+14. testing
+15. linting
+16. write documentation
+17. put it on hackernews, reddit
+18. analytics
+19. Something to detect crashes. When someone crashes the app receive an email or simillar.
+20. i18n (internationalization - make website change languages) ~ 5 hours -- 3 day
+21. make input correctly move coursor when clicking on arrows
+22. callPlayerToAction can be simplified
+23. add isComplited to turn class
+
 
 
