--- a/TODO
+++ b/TODO
@@ -50,6 +50,7 @@ X 1. reload should only be prompted when:
 21. change style of the github/facebook icons
 24. write documentation
 25. put it on hackernews, reddit
+26. back --> undo
 
 
 20. i18n (internationalization - make website change languages) ~ 5 hours -- 3 day
