--- a/TODO
+++ b/TODO
@@ -35,9 +35,9 @@ X 16. install GA - google analytics
 X 17. make static page
 
 
-X 18 1. reload should only be prompted when:
+18 1. reload should only be prompted when:
   a. you are not in dev mode
-  b. you have played at least one move, and the game is not over
+19. . you have played at least one move, and the game is not over
 X 19. figure out why the react snapshot adds bugs, and fix it
 X 20. logo size should be shown with css
 X 21. do event tracking with react-ga
@@ -46,11 +46,12 @@ X 23. change style for nameinput
 X 24. change style of the github/facebook icons
 X 25. change style for modifier container desktop
 X 26. no scrolling for desktop
+27. image preload
 27. take out dialogue "leave page"
 28.rewrite instructions How to use scrabblescore online 
 X 29. callPlayerToAction can be simplified
 X 30. browser back button go back to gamesettings, forward button go to scorekeeper, saving the players names
-
+make notes for the history pushing
 
 
 
