--- a/TODO
+++ b/TODO
@@ -29,15 +29,10 @@ X 11. color/ and shape ~ 10 hours -- 2 days
     - rename start button
 X 12. Create PLAYER WON
 X 13. all above is working for both desktop and mobile ~ 3 hours -- 1 day
-14. testing
+X 14. testing
 X 15. linting
 X 16. install GA - google analytics
 X 17. make static page
-
-
-18 1. reload should only be prompted when:
-  a. you are not in dev mode
-19. . you have played at least one move, and the game is not over
 X 19. figure out why the react snapshot adds bugs, and fix it
 X 20. logo size should be shown with css
 X 21. do event tracking with react-ga
@@ -46,12 +41,24 @@ X 23. change style for nameinput
 X 24. change style of the github/facebook icons
 X 25. change style for modifier container desktop
 X 26. no scrolling for desktop
-27. image preload
-27. take out dialogue "leave page"
+X 27. callPlayerToAction can be simplified
+X 28. browser back button go back to gamesettings, forward button go to scorekeeper, saving the players names
+
+
+
+
+X 29. reload should only be prompted when:
+      X a. you are not in dev mode
+      X b. you have played at least one move, and the game is not over
+X 27. image preload/ was changed to prefetch
+29. watch events with amplitude
+22. modifier tiles styles, avoid gradient
+27. make notes for the history pushing, preloading images
 28.rewrite instructions How to use scrabblescore online 
-X 29. callPlayerToAction can be simplified
-X 30. browser back button go back to gamesettings, forward button go to scorekeeper, saving the players names
-make notes for the history pushing
+
+
+
+
 
 
 
