Update for message in the footer; update for bingo-toggle style

--- a/TODO
+++ b/TODO
@@ -57,7 +57,7 @@ X 33. Put the logEvent()/logEventInit() code in util.js, and only log when in pr
   X - Refactor the code that test if is react-snap with a function from util.js
 X 34. disable the player name input box if the app has not loaded yet.
 X 35. Take out ReactGA events
-36. logo should be clickable to go back to home page
+X 36. logo should be clickable to go back to home page
 
 37. instructions:
   put game over instructions in the same how to block of text. Instruction if -> when.
@@ -68,12 +68,11 @@ X 35. Take out ReactGA events
      - More than one word to submit: Same as previously, but use the ADD WORD button.
      - no words to submit (pass): press the PASS button
   Dont use "Note: "
-Style bingo toggle
 
-38. you may contact me via email. -> you may contact the developer, Anna Maniuk, via email.
+X 38. Style bingo toggle
+X 39. you may contact me via email. -> you may contact the developer, Anna Maniuk, via email.
 
-39. Mobile: scroll up when first load game 
-Mobile: take out the Scrable Score Sheet title.
+
 40. Preload the image doing some hacks.
 
 41. Set body to have min width of 400px;
@@ -82,7 +81,8 @@ Mobile: take out the Scrable Score Sheet title.
 do some keyword research, and figure out a way to put it in your desc.
 45. facebook link should not be face
 46. linting
-
+47. Mobile: scroll up when first load game 
+Mobile: take out the Scrable Score Sheet title.
 
 
 
