--- a/TODO
+++ b/TODO
@@ -71,18 +71,17 @@ X 36. logo should be clickable to go back to home page
 
 X 38. Style bingo toggle
 X 39. you may contact me via email. -> you may contact the developer, Anna Maniuk, via email.
+X 40. Preload the image doing some hacks.
+X 41. Set body to have min width of 400px;
 
 
-40. Preload the image doing some hacks.
-
-41. Set body to have min width of 400px;
 43. InGameControl: there's a isMobile prop that seems useless.
 44. Put description that google can pick up
 do some keyword research, and figure out a way to put it in your desc.
 45. facebook link should not be face
 46. linting
 47. Mobile: scroll up when first load game 
-Mobile: take out the Scrable Score Sheet title.
+X 48. Mobile: take out the Scrable Score Sheet title.
 
 
 
