--- a/TODO
+++ b/TODO
@@ -58,6 +58,12 @@ X 33. Put the logEvent()/logEventInit() code in util.js, and only log when in pr
 X 34. disable the player name input box if the app has not loaded yet.
 X 35. Take out ReactGA events
 X 36. logo should be clickable to go back to home page
+X 37. Style bingo toggle
+X 38. you may contact me via email. -> you may contact the developer, Anna Maniuk, via email.
+X 39. Preload the image doing some hacks.
+X 40. Set body to have min width of 400px;
+X 41. Mobile: take out the Scrable Score Sheet title.
+
 
 37. instructions:
   put game over instructions in the same how to block of text. Instruction if -> when.
@@ -68,20 +74,15 @@ X 36. logo should be clickable to go back to home page
      - More than one word to submit: Same as previously, but use the ADD WORD button.
      - no words to submit (pass): press the PASS button
   Dont use "Note: "
-
-X 38. Style bingo toggle
-X 39. you may contact me via email. -> you may contact the developer, Anna Maniuk, via email.
-X 40. Preload the image doing some hacks.
-X 41. Set body to have min width of 400px;
-
-
 43. InGameControl: there's a isMobile prop that seems useless.
 44. Put description that google can pick up
 do some keyword research, and figure out a way to put it in your desc.
 45. facebook link should not be face
 46. linting
 47. Mobile: scroll up when first load game 
-X 48. Mobile: take out the Scrable Score Sheet title.
+
+49 blank tile: show the letter with some transparency
+50 figure out the colors for modifiers
 
 
 
