--- a/TODO
+++ b/TODO
@@ -66,14 +66,14 @@ X 44. blank tile: show the letter with some transparency
 X 45. figure out the colors for modifiers
 X 46. inGameOver PASSED --> NO LEFTOVERS
 X 47. modifier color border, fix letters so they don't move because of the border
-48. bingo line height in the table cell
-46. first turn instruction 
-css class first-turn
-star for first double letter
-image canvas size
-add-word has to be disabled for first turn
-passing is ok, but not end turn without modifier
-add popover with instruction "click on the tile"
+X 48. first turn instruction 
+  X - css class first-turn
+  X - star for first double letter
+  X - image canvas size
+  X - add-word has to be disabled for first turn
+  X - passing is ok, but not end turn without modifier
+  X - add popover with instruction "click on the tile"
+48. Mobile bingo line height in the table cell
 44. Put description that google can pick up
 49. on arrow key even preventDefault()
 
