--- a/TODO
+++ b/TODO
@@ -73,7 +73,7 @@ X 48. first turn instruction
   X - add-word has to be disabled for first turn
   X - passing is ok, but not end turn without modifier
   X - add popover with instruction "click on the tile"
-48. Mobile bingo line height in the table cell
+X 48. Mobile bingo line height in the table cell
 44. Put description that google can pick up
 49. on arrow key even preventDefault()
 
