--- a/TODO
+++ b/TODO
@@ -74,24 +74,30 @@ X 48. first turn instruction
   X - passing is ok, but not end turn without modifier
   X - add popover with instruction "click on the tile"
 X 48. Mobile bingo line height in the table cell
-44. Put description that google can pick up
-49. on arrow key even preventDefault()
-
-X 37. instructions:
-  put game over instructions in the same how to block of text. Instruction if -> when.
-  Reiterate that you are replacing the pen and paper scoring.
-  move -> turn
-  Each turn can have three possiblities:
+X 49. Bingo disabled if less than 7 letters submitted
+X 50. Change style for logo && small-logo
+X 51. instructions:
+  X - put game over instructions in the same how to block of text. Instruction if -> when.
+  X - Reiterate that you are replacing the pen and paper scoring.
+  X - move -> turn
+  X - Each turn can have three possiblities:
      - one word to submit: type the word in the inputbox. If one of the letter in your word is on a premium square (e.g., double-word), click on the letter tile and select the corresponding premium square. Then press end-turn.
      - More than one word to submit: Same as previously, but use the ADD WORD button.
      - no words to submit (pass): press the PASS button
-  Dont use "Note: "
+  X - Dont use "Note: "
+X 52. on arrow key even preventDefault()
+X 53. linting
+54. tests all green0
+44. Put description that google can pick up, scoring work according to the official rules 
+
+
+
 
 do some keyword research, and figure out a way to put it in your desc.
 
 
 45. facebook link should not be face
-46. linting
+
 
 
 
