--- a/TODO
+++ b/TODO
@@ -91,10 +91,15 @@ X 54. tests all green
 X 55. Put description that google can pick up, scoring work according to the official rules 
 X 56. Add meta-description for Google
 X 57. First turn disappeared: Prevent form from submission
-58. Closing tabs on mobile ? Maybe use LocalStorage to save current game
-59. Scrolled up when passing/undo
-60. Screen stays on
+X 58. Closing tabs on mobile ? Maybe use LocalStorage to save current game
+X 59. Scrolled up when passing/undo
+60. Screen stays on (should use https://github.com/richtr/NoSleep.js)
 61. Blank tile on modifier
+62. leftover row is empty at the end of the game 
+X 63. button for new game
+64. when clicking on undo do no refocus
+65. firefox has react icon
+66. send event to amplitude when users respond to resume game option
 
 
 
