--- a/TODO
+++ b/TODO
@@ -101,8 +101,9 @@ X 64. when clicking on undo do no refocus
 X 65. send event to amplitude when users respond to resume game option
 X 66. swap new game and undo button
 X 67. clean up button classes
-68. new-game clean localStorage (make new-game a real button with a handles
-69. log event when clicking on new game button
+X 68. new-game clean localStorage (make new-game a real button with a handlers)
+X 69. log event when clicking on new game button
+X 70. add bullet poin about starting new game(to start a new game click on the logo or reload the page)
 
 
 
