IOS adaptaion camplete
1. Cleaning unnecessary spaces
2. Meta tag description is simplified.
3. Big-logo transformed from css background into img tag for
GameSettings.
4. noSleep variable is not being created if isTest and isCordova.
5. Images relocated into Css (base64):
  a. Tile
  b.  Modifier-frames
  c. Github logo
  d. Facebook logo
6. Note to add .top padding-top: 20px for second css file in
www/static/css for Cordova
7. Note to change path from absolute to relative in index.js (6
changes).
8. Note to change hidden-input box caret color to font-size:0 for second
css file in www/static/css for Cordova.
9. Note to add <meta name="viewport" content="viewport-fit=cover,
initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"
/> into index.js

--- a/TODO
+++ b/TODO
@@ -107,9 +107,9 @@ X 70. add bullet poin about starting new game(to start a new game click on the l
 X 71. toggling bingo should not take the focus out of the input box
 X 72. undoing END GAME makes the display scroll on the way up on mobile. No good
 X 73. the new game instruction isn't clear
-74. *maybe* a way to get bug reports when things crash
-
-
+X 74. logo.png make as an image tag, specify width in % so we can resize.
+X 75. put images (all except logo) directly in the css as base64
+76. *maybe* a way to get bug reports when things crash
 
 
 Asosiations to contact:
